# Embedded-Lab-Control

./: .gitignore  AGENT_RULES.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  IMPLEMENTATION.md  README.md  REVIEW.md  STATUS.md  pyproject.toml
.claude/: settings.json
config/: labctl.yaml.example
config/ser2net/: labctl-ser2net.yaml
config/systemd/: labctl-mcp.service  labctl-monitor.service  labctl-web.service
config/udev/: 99-lab-serial.rules  port-mapping.yaml
docs/: AGENT_RULES.md  DECISIONS.md  HARDWARE_MAP.md  IMPLEMENTATION.md  MCP_SERVER.md  RESOLVED_BUG_ser2net_missing_dev_prefix.md  RESOLVED_FEATURE_sdwire_power_safety.md  RESOLVED_SPEC_activity_stream.md  SPEC_activity_stream.md  SPEC_claims.md  SPEC_sdwire_read_access.md  SPEC_storage_device_guardrails.md
scripts/: discover-usb-serial.sh  generate-udev-rules.py  install-services.sh  install-udev.sh  kasa-debug.py  update.sh
skills/: deploy-and-test.md
src/labctl/: __init__.py  cli.py  mcp_server.py  services.py
src/labctl/core/: __init__.py  audit.py  config.py  database.py  manager.py  models.py
src/labctl/health/: __init__.py  alerts.py  checks.py  daemon.py
src/labctl/power/: __init__.py  base.py  kasa.py  shelly.py  tasmota.py
tests/: conftest.py
tests/integration/: test_auth.py  test_cli.py  test_web.py
tests/unit/: test_activity_broadcaster.py  test_audit.py  test_boot_test.py  test_config.py  test_database.py  test_health.py  test_manager.py  test_mcp_server.py  test_power.py  test_proxy.py  test_sdwire.py  test_ser2net.py  test_serial_capture.py  test_services.py  test_udev.py
(+25 files in other folders)
